Fix letter spacing for developer section

--- a/css/one.css
+++ b/css/one.css
@@ -1117,7 +1117,7 @@ div.quest-content p {
     text-align: left;
 }
 
-* {
+body {
     letter-spacing: 1px
 }
 
